Prueba de nuevas tipografías

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             background-color: #eee;
             padding: 10px 25px 25px 25px;
             float: left;
+            font-family: Garamond, Helvetica, serif;
         }
 
         .lateral-container {
@@ -77,6 +78,7 @@
             margin-top: 3%;
             margin-left: 2%;
             padding: 5px 10px 10px 10px;
+            font-family: Palatino, Arial, serif;
         }
 
     </style>
