--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             margin-top: 3%;
             margin-left: 2%;
             padding: 5px 10px 10px 10px;
+            font-size: 1.1em;
         }
 
     </style>
